[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zxchelper"
version = "0.1.0"
authors = [
  { name="zxc4we", email="zxc4we028@gmail.com" },
]
description = "Helpul package to requests and selenium with undetected"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zxc4we-lab/zxchelper"
Issues = "https://github.com/zxc4we-lab/zxchelper/issues"